# stochastic-facility-location

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
configs/experiments/: classic_highs.yaml  headline_150_50.yaml  scip_single_tree.yaml  sigma_0.10.yaml  sigma_0.20.yaml  sigma_0.30.yaml  smoke.yaml
docs/: algorithm.md  index.md  installation.md  reproducing-results.md  usage.md
docs/superpowers/specs/: 2026-06-09-technical-report-design.md
paper/: README.md  main.tex  references.bib
paper/data/: results.json
scripts/: collect_results.py  run_all_experiments.sh
src/sflp/: __init__.py  cli.py  config.py  experiment.py  plotting.py  saa.py  solve.py
src/sflp/benders/: __init__.py  backend.py  classic.py  cuts.py  gurobi_backend.py  scip_backend.py
src/sflp/data/: __init__.py  download.py  generate.py  instance.py  parse.py
src/sflp/model/: __init__.py  chance.py  facility_location.py  master.py  saa_monolith.py  subproblem.py
tests/integration/: test_gurobi_backend.py  test_or_library_optima.py
tests/unit/: test_benders_classic.py  test_chance.py  test_config.py  test_download.py  test_facility_location.py  test_generate.py  test_package.py  test_parse.py  test_saa.py  test_saa_monolith.py  test_scip_backend.py
