[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochastic-facility-location"
version = "0.1.0"
description = "Two-stage stochastic capacitated facility location with SAA, service-level chance constraints, and a Benders decomposition with Pareto-optimal cuts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Mohammad S. Hajibabaie", email = "hajibabaie.mohammad@gmail.com" }]
keywords = [
    "operations-research",
    "facility-location",
    "stochastic-programming",
    "benders-decomposition",
    "mixed-integer-programming",
    "sample-average-approximation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "pyomo>=6.7",
    "highspy>=1.7",
    "pyscipopt>=5.1",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=11.0"]
cplex = ["cplex>=22.1", "docplex>=2.25"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML>=6.0",
    "pandas-stubs>=2.0",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/hajibabaie/stochastic-facility-location"
Repository = "https://github.com/hajibabaie/stochastic-facility-location"

[project.scripts]
sflp = "sflp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sflp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "NPY", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that solve larger instances (deselect with '-m \"not slow\"')",
    "gurobi: marks tests that require a Gurobi license",
    "network: marks tests that download third-party data (skip if offline)",
]

[tool.coverage.run]
source = ["sflp"]
branch = true
omit = [
    "src/sflp/benders/gurobi_backend.py",
    "src/sflp/plotting.py",
    "src/sflp/cli.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pyomo.*", "pyscipopt.*", "highspy.*", "gurobipy.*", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true
